--- a/Flugplatzfest Terminal/Flugplatzfest Terminal.csproj
+++ b/Flugplatzfest Terminal/Flugplatzfest Terminal.csproj
@@ -91,9 +91,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\CommandBase.cs" />
+    <Compile Include="Commands\NavigateBackCommand.cs" />
     <Compile Include="Commands\NavigateSettingsCommand.cs" />
+    <Compile Include="Commands\UseMenuCommand.cs" />
     <Compile Include="Commands\SendMessageCommand.cs" />
     <Compile Include="Model\Messages\Chat.cs" />
+    <Compile Include="Model\Config.cs" />
     <Compile Include="Stores\NavigationStore.cs" />
     <Compile Include="ViewModels\ChatViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -137,7 +140,7 @@
     <Compile Include="Model\Messages\InterfaceType.cs" />
     <Compile Include="Model\Messages\MessageDirection.cs" />
     <Compile Include="Model\Messages\TextMessage.cs" />
-    <Compile Include="Model\Speisekarte.cs" />
+    <Compile Include="Model\Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
