--- a/Flugplatzfest Terminal/packages.config
+++ b/Flugplatzfest Terminal/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Channels" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="Telegram.Bot" version="17.0.0" targetFramework="net472" />
   <package id="Telegram.Bot.Extensions.Polling" version="1.0.2" targetFramework="net472" />
+  <package id="Twilio" version="5.72.1" targetFramework="net48" />
 </packages>
